--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
  
    
 
-    <title>React App</title>
+    <title>Dashboard</title>
   </head>
   <body>
     
